--- a/src/app/group/group.page.html
+++ b/src/app/group/group.page.html
@@ -19,32 +19,38 @@
     <!-- Crear una fila por cada elemento --> 
     <ion-row *ngFor="let grupo of grupos" >
       <!-- Crear columna para el icono-->
-      <ion-col size="1" [routerLink]="['/menu1', grupo.gro_id, grupo.gro_fksubject, grupo.gro_code]">
+      <ion-col size="1" [routerLink]="['/menu1', grupo.gro_id, grupo.subject, grupo.gro_code]">
       <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
       </ion-col>
       <!-- Crear columna para el texto-->
       <ion-col [routerLink]="['/menu1', grupo.gro_id, grupo.subject, grupo.gro_code]">
         <ion-label>
           <h2>{{grupo.subject}} {{grupo.gro_code}}</h2>
-          <h3>Docente: {{grupo.teacher}} </h3>
+          <h3>Ubicación: {{grupo.classroom}} </h3>
         </ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
   
 
-  <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     
     <!-- Boton principal -->
     <ion-fab-button>
-      <ion-icon name="chevron-down-circle"></ion-icon>
+      <ion-icon name="chevron-up-circle"></ion-icon>
     </ion-fab-button>
 
-    <ion-fab-list side="bottom">
+    <ion-fab-list side="top">
       <!-- Botones secundarios -->
+
+      <!-- Unirse a un grupo -->
       <ion-fab-button (click)="mostrarAlerta()">
-        <ion-icon name="add-circle-outline"></ion-icon>
+        <ion-icon name="person-add"></ion-icon>
       </ion-fab-button >
+      <!-- Crear grupo -->
+      <ion-fab-button (click)="new()">
+        <ion-icon name="add-circle-outline"></ion-icon>
+      </ion-fab-button>
       <!-- Tabla classroom -->
       <ion-fab-button [routerLink]="['/classroom']">
         <ion-icon name="business-outline"></ion-icon>
