--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -29,9 +29,24 @@
   </ion-fab>
 
   
+  <ion-grid>
+    <!-- Crear una fila por cada elemento --> 
+    <ion-row *ngFor="let major of majors" >
+      <!-- Crear columna para el icono-->
+      <ion-col size="1" >
+      <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
+      </ion-col>
+      <!-- Crear columna para el texto-->
+      <ion-col >
+        <ion-label>
+          <h2>{{major.maj_name}}</h2>
+          <h3>{{major.maj_code}}</h3>
+        </ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-
-  <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas -->
+  <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas
   <ion-card *ngFor="let major of majors" >
     <ion-card-header>
       <ion-card-title>{{ major.maj_name }}</ion-card-title>
@@ -44,6 +59,6 @@
     </ion-card-content>
   </ion-card>
 
-
+-->
 
 </ion-content>
