--- a/src/app/newmajor/newmajor.page.html
+++ b/src/app/newmajor/newmajor.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
         <ion-back-button defaultHref="/ruta-anterior"></ion-back-button>
       </ion-buttons>
-      <ion-title>nueva-carrera</ion-title>
+      <ion-title>Nueva Carrera</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -13,7 +13,7 @@
             <ion-row>
                 <ion-col size="12">
                     <ion-item>
-                        <ion-label position="floating" color="primary">Nombre de la materia</ion-label>
+                        <ion-label position="floating" color="primary">Nombre de la Carrera</ion-label>
                         <ion-input type="text" formControlName="maj_name" class="form-control"></ion-input>
                     </ion-item>
                     <div id="note" *ngFor="let validation of
@@ -26,7 +26,7 @@
                 </ion-col>
                 <ion-col size="12">
                     <ion-item>
-                        <ion-label position="floating" color="primary">Codigo de la Materia</ion-label>
+                        <ion-label position="floating" color="primary">Codigo de la Carrera</ion-label>
                         <ion-input type="text" formControlName="maj_code" class="form-control"></ion-input>
                     </ion-item>
                     <div id="note" *ngFor="let validation of
