--- a/src/app/subject/subject.page.html
+++ b/src/app/subject/subject.page.html
@@ -17,10 +17,10 @@
       <ion-icon name="chevron-down-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="bottom">
-      <ion-fab-button color= var(--ion-color-primary) (click)="mostrarAlerta()">
+      <ion-fab-button color= var(--ion-color-primary) (click)="newSubject()">
         <ion-icon name="pencil-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button [routerLink] = "['/elim-subject']" >
+      <ion-fab-button (click)="elimSubject()" >
         <ion-icon name="backspace-outline"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
@@ -29,10 +29,25 @@
     </ion-fab-list>
   </ion-fab>
 
+  <ion-grid>
+    <!-- Crear una fila por cada elemento --> 
+    <ion-row *ngFor="let subjects of subject" >
+      <!-- Crear columna para el icono-->
+      <ion-col size="1" >
+      <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
+      </ion-col>
+      <!-- Crear columna para el texto-->
+      <ion-col >
+        <ion-label>
+          <h2>{{subjects.sub_name}}</h2>
+          <h3>{{subjects.sub_code}}</h3>
+        </ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 
-
-  <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas -->
+  <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas 
   <ion-card *ngFor="let subjects of subject" >
     <ion-card-header>
       <ion-card-title>{{ subjects.sub_name }}</ion-card-title>
@@ -40,7 +55,7 @@
     </ion-card-header>
   
   </ion-card>
-  
+-->
   
 
 
