POST de asistencia (listg)

--- a/src/app/menu1/menu1.page.html
+++ b/src/app/menu1/menu1.page.html
@@ -13,7 +13,7 @@
   <ion-grid>
     <ion-row class="ion-justify-content-center">
       <ion-col class="">
-        <ion-button class="ion-activatable ripple-parent circle" fill="clear">
+        <ion-button class="ion-activatable ripple-parent circle" fill="clear"[routerLink]="['/asistencia', grupoid]">
           <ion-icon aria-hidden="true"  src="assets/icon/asistencia.svg" size="large"></ion-icon>
         </ion-button>
         <ion-label>Asistencia</ion-label>
