--- a/src/app/newlibrary/newlibrary.page.html
+++ b/src/app/newlibrary/newlibrary.page.html
@@ -22,6 +22,7 @@
           </ion-note>
       </div>
       </ion-col>
+      <!-- Valor 2 -->
       <ion-col size="12">
       <ion-item>
           <ion-label position="floating" color="primary">Título</ion-label>
