--- a/src/app/menu1/menu1.page.scss
+++ b/src/app/menu1/menu1.page.scss
@@ -1,13 +1,9 @@
-ion-header{
-    border-radius: 14px;
-    --border-color:#F6F6F6;
-
-}
-
-ion-toolbar{
-   
-    border-radius: 4px;
-    --border-color:#F6F6F6;
+ion-header {
+    ion-toolbar {
+        --ion-toolbar-background: linear-gradient(90deg, rgba(111,96,228,1) 4%, rgba(94,109,231,1) 37%, rgba(14,171,245,1) 60%, rgba(146,197,215,1) 86%);
+        color: #fff;
+        font-weight: bold;
+    }
 }
 
 .ripple-parent {
