--- a/src/app/newlibrary/newlibrary.page.html
+++ b/src/app/newlibrary/newlibrary.page.html
@@ -8,8 +8,8 @@
 <form [formGroup]="libro" (ngSubmit)="guardarDatos()">
   <ion-grid> <!-- Cuadrícula de diseño -->
   <ion-row> <!-- Fila de la cuadrícula -->
-     <!-- Valor 1 -->
-      <ion-col size="12"> <!-- Columna con tamaño completo (12) -->
+     <!-- Escribir manualmente los tipos de archivos-->
+      <!-- <ion-col size="12"> 
       <ion-item>
           <ion-label position="floating" color="primary">Tipo de Archivo</ion-label>
           <ion-input type="text" formControlName="lib_type"
@@ -21,7 +21,25 @@
           <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
           </ion-note>
       </div>
+    </ion-col>-->
+
+    <!-- Mostrar automaticamente los tipos de archivos-->
+      <ion-col size="12">
+        <ion-item>
+          <ion-label position="floating" color="primary">Tipo de Archivo</ion-label>
+          <ion-select formControlName="lib_type" class="form-control">
+            <ion-select-option *ngFor="let tipo of tiposArchivo" [value]="tipo.lib_type">
+              {{ tipo.typ_type }}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+        <div id="note" *ngFor="let validation of mensajes_validacion.lib_type">
+          <ion-note color="danger" *ngIf="getError('lib_type')[(validation.type)]">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </ion-note>
+        </div>
       </ion-col>
+
       <!-- Valor 2 -->
       <ion-col size="12">
       <ion-item>
@@ -36,6 +54,7 @@
           </ion-note>
       </div>
       </ion-col>
+    <!-- Valor 3 -->
       <ion-col size="12">
       <ion-item>
           <ion-label position="floating" color="primary">Descripción</ion-label>
@@ -49,6 +68,7 @@
           </ion-note>
       </div>
       </ion-col>
+     <!-- Valor 4 -->
       <ion-col size="12">
       <ion-item>
           <ion-label position="floating" color="primary">URL</ion-label>
@@ -62,7 +82,8 @@
           </ion-note>
       </div>
       </ion-col>
-      <ion-col size="12">
+     <!-- Valor 5 (grupo) ya esta siendo recibido, no hace falta visualizarlo-->     
+<!-- <ion-col size="12">
         <ion-item>
             <ion-label position="floating" color="primary">Grupo</ion-label>
             <ion-input type="text" formControlName="lib_fkgroup"
@@ -74,7 +95,7 @@
             <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
             </ion-note>
         </div>
-      </ion-col>
+    </ion-col>-->
         <!-- Boton de Guardar -->
       <ion-col size="12">
       <p class="ion-text-center">
