--- a/src/app/newlista/newlista.page.html
+++ b/src/app/newlista/newlista.page.html
@@ -8,9 +8,8 @@
 <form [formGroup]="lista" (ngSubmit)="guardarDatos()">
   <ion-grid> <!-- Cuadrícula de diseño -->
   <ion-row> <!-- Fila de la cuadrícula -->
-
-     <!-- Valor 1 ya esta siendo recibido, no hace falta visualizarlo-->
-<!-- <ion-col size="12"> 
+     <!-- Valor 1 (grupo) ya esta siendo recibido, no hace falta visualizarlo-->
+      <!-- <ion-col size="12"> 
         <ion-item>
             <ion-label position="floating" color="primary">Nombre del grupo</ion-label>
             <ion-input
@@ -43,7 +42,6 @@
             <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
           </ion-note>
         </div>
-        
       </ion-col>
 
         <!-- Boton de Guardar -->
