--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -17,13 +17,13 @@
     </ion-fab-button>
     <ion-fab-list side="bottom">
       <ion-fab-button (click)="newMajor()">
-        <ion-icon name="pencil-outline"></ion-icon>
+        <ion-icon name="create-outline"></ion-icon>
       </ion-fab-button >
       <ion-fab-button (click)="elimMajor()">
         <ion-icon name="backspace-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="help-outline"></ion-icon>
+      <ion-fab-button (click)="upMajor()">
+        <ion-icon name="pencil-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
@@ -42,6 +42,7 @@
           <h2>{{major.maj_name}}</h2>
           <h3>{{major.maj_code}}</h3>
         </ion-label>
+        
       </ion-col>
     </ion-row>
   </ion-grid>
