--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -22,21 +22,20 @@
       <ion-fab-button (click)="elimMajor()">
         <ion-icon name="backspace-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button (click)="upMajor()">
+      <ion-fab-button (click)="UpMajor()">
         <ion-icon name="pencil-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 
-  
-  <ion-grid>
-    <!-- Crear una fila por cada elemento --> 
+  <!--<ion-grid>
+    Crear una fila por cada elemento
     <ion-row *ngFor="let major of majors" >
-      <!-- Crear columna para el icono-->
+       Crear columna para el icono
       <ion-col size="1" >
       <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
       </ion-col>
-      <!-- Crear columna para el texto-->
+       Crear columna para el texto
       <ion-col >
         <ion-label>
           <h2>{{major.maj_name}}</h2>
@@ -45,7 +44,32 @@
         
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
+  
+
+
+  <ion-item-sliding *ngFor="let major of majors">
+    <ion-item>
+      <ion-grid class="custom-grid">
+        <ion-row>
+          <ion-col size="1">
+            <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
+          </ion-col>
+          <ion-col>
+            <ion-label>
+              <h2>{{ major.maj_name }}</h2>
+              <h3>{{ major.maj_code }}</h3>
+            </ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option color="danger" expandable="true" (click)="seleccionarMajor(major.maj_id)">
+        <ion-icon slot="icon-only" name="trash" class="custom-trash-icon"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
 
   <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas
   <ion-card *ngFor="let major of majors" >
