--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -11,6 +11,71 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-grid>
+    <ion-row *ngFor="let major of majors">
+      <ion-col size="1">
+        <div class="rectangle-avatar">
+          <ion-img src="https://ionicframework.com/docs/img/demos/card-media.png" alt="Foto"></ion-img>
+        </div>
+      </ion-col>
+
+      <ion-col size="8">
+        <ion-label class="ion-text-wrap">
+          <h2>{{major.maj_name}}</h2>
+          <h3>{{major.maj_code}}</h3>
+        </ion-label>
+      </ion-col>
+
+      <ion-col>
+        <ion-button id="click-trigger-{{major.maj_id}}">
+          <ion-icon name="ellipsis-vertical"></ion-icon>
+        </ion-button>
+        <ion-popover
+          trigger="click-trigger-{{major.maj_id}}"
+          [dismissOnSelect]="true"
+          [keepContentsMounted]="true"
+          side="end">
+          <ng-template>
+            <ion-content>
+              <ion-list>
+                <ion-item 
+                [button]="true" 
+                [detail]="false"
+                (click)="seleccionarMajor(major.maj_id)"> 
+                <ion-icon name="trash"></ion-icon>
+                Eliminar
+                </ion-item>
+                <ion-item
+                  [button]="true"
+                  [detail]="false"
+                  [routerLink]="['modextra', major.maj_id]"> 
+                  <ion-icon name="create"></ion-icon>
+                  Modificar 
+                </ion-item>
+                <ion-item
+                  [button]="true"
+                  [detail]="false"
+                  [routerLink]="['extracurricular', major.maj_id]"> 
+                  <ion-icon name="eye"></ion-icon>
+                  Ver mas 
+                </ion-item>
+              </ion-list>
+            </ion-content>
+          </ng-template>
+        </ion-popover>
+      </ion-col>
+
+      <!-- <ion-col>
+        <ion-button (click)="alertEliminar(extras.extgro_id)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
+      </ion-col> -->
+
+    </ion-row>
+  </ion-grid>
+  
+  <!--
+
   <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
     <ion-fab-button>
       <ion-icon name="chevron-down-circle"></ion-icon>
@@ -27,6 +92,7 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+-->
 
   <!--<ion-grid>
     Crear una fila por cada elemento
@@ -47,7 +113,7 @@
   </ion-grid>-->
   
 
-
+<!--
   <ion-item-sliding *ngFor="let major of majors">
     <ion-item>
       <ion-grid class="custom-grid">
@@ -61,15 +127,23 @@
               <h3>{{ major.maj_code }}</h3>
             </ion-label>
           </ion-col>
+          
+
+          
         </ion-row>
       </ion-grid>
     </ion-item>
-    <ion-item-options side="end">
+
+  -->
+
+    
+    <!--<ion-item-options side="end">
       <ion-item-option color="danger" expandable="true" (click)="seleccionarMajor(major.maj_id)">
         <ion-icon slot="icon-only" name="trash" class="custom-trash-icon"></ion-icon>
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
+-->
 
   <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas
   <ion-card *ngFor="let major of majors" >
