--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -48,7 +48,7 @@
                 <ion-item
                   [button]="true"
                   [detail]="false"
-                  [routerLink]="['modextra', major.maj_id]"> 
+                  (click)="UpMajor(major.maj_id)"> 
                   <ion-icon name="create"></ion-icon>
                   Modificar 
                 </ion-item>
