--- a/src/app/asistencia/asistencia.page.html
+++ b/src/app/asistencia/asistencia.page.html
@@ -10,18 +10,20 @@
 
 <ion-content [fullscreen]="true">
   <ion-list lines="inset">
-    <ion-item class="ion-text-wrap">
+    <ion-item class="ion-text-wrap" button fill="clear" [routerLink]="['/lista-asistencia',grupoid]" >
+      <ion-icon slot="start" src="assets/grupoMenu/code.svg"></ion-icon>
       <ion-label>Ver asistencia</ion-label>
       <!-- lista de asistencia -->
-      <ion-button fill="clear" [routerLink]="['/lista-asistencia',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+      <!-- <ion-button fill="clear" [routerLink]="['/lista-asistencia',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
     </ion-item>
     <ion-item>
       <!-- Tomar asistencia por  -->
       <ion-label>Tomar asistencia</ion-label>
     </ion-item>
-    <ion-item>
+    <ion-item button fill="clear" [routerLink]="['/codigos',grupoid]">
+      <ion-icon slot="start" src="assets/grupoMenu/qr-code.svg"></ion-icon>
       <ion-label>Codigo</ion-label>
-      <ion-button fill="clear" [routerLink]="['/codigos',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button>
+      <!-- <ion-button fill="clear" [routerLink]="['/codigos',grupoid]"><ion-icon name="arrow-forward-outline"></ion-icon></ion-button> -->
     </ion-item>
   </ion-list>
 
