--- a/src/app/generar-codigo/generar-codigo.page.html
+++ b/src/app/generar-codigo/generar-codigo.page.html
@@ -11,7 +11,10 @@
   <form [formGroup]="codigo" (ngSubmit)="guardarDatos()">
     <ion-grid> <!-- Cuadrícula de diseño -->
       <ion-row> <!-- Fila de la cuadrícula -->
-        <ion-col size="12"> <!-- Columna con tamaño completo (12) -->
+
+        <!-- Codigo -->
+        <!-- Columna con tamaño completo (12) -->
+        <!-- <ion-col size="12">
           <ion-item>
             <ion-label position="floating" color="primary">Codigo</ion-label>
             <ion-input type="text" formControlName="cod_code" class="form-control"></ion-input>
@@ -21,59 +24,37 @@
               <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
             </ion-note>
           </div>
-        </ion-col>
+        </ion-col> -->
+        <!-- Fecha -->
+        <ion-label color="primary">Fecha</ion-label>
+        <ion-datetime presentation="date" [preferWheel]="true" formControlName="cod_date"
+          class="form-control"></ion-datetime>
+        <!-- <div id="note" *ngFor="let validation of
+        mensajes_validacion.cod_date">
+          <ion-note color="danger" *ngIf="getError('cod_date')[(validation.type)]">
+            <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
+          </ion-note>
+        </div> -->
+
+        <!-- Duracion -->
+        <ion-label color="primary">Duracion</ion-label>
         <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Grupo</ion-label>
-            <ion-input type="text" formControlName="cod_fkgroup" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of
-            mensajes_validacion.cod_fkgroup">
-            <ion-note color="danger" *ngIf="getError('cod_fkgroup')[(validation.type)]">
-              <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
-            </ion-note>
-          </div>
-        </ion-col>
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Hora</ion-label>
-            <ion-input type="text" formControlName="cod_time" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of
-            mensajes_validacion.cod_time">
-            <ion-note color="danger" *ngIf="getError('cod_time')[(validation.type)]">
-              <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
-            </ion-note>
-          </div>
-        </ion-col>
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Fecha</ion-label>
-            <ion-input type="text" formControlName="cod_date" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of
-            mensajes_validacion.cod_date">
-            <ion-note color="danger" *ngIf="getError('cod_date')[(validation.type)]">
-              <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
-            </ion-note>
-          </div>
-        </ion-col>
-        <ion-col size="12">
-          <ion-item>
-            <ion-label position="floating" color="primary">Duracion</ion-label>
-            <ion-input type="number" placeholder="000" formControlName="cod_duration" class="form-control"></ion-input>
-          </ion-item>
-          <div id="note" *ngFor="let validation of mensajes_validacion.cod_duration">
+
+          <ion-datetime presentation="time" [preferWheel]="true" formControlName="cod_duration"></ion-datetime>
+
+          <!-- <div id="note" *ngFor="let validation of mensajes_validacion.cod_duration">
             <ion-note color="danger" *ngIf="getError('cod_duration')[(validation.type)]">
               <ion-icon name="information-circle-outline"></ion-icon> {{validation.message }}
             </ion-note>
-          </div>
+          </div> -->
         </ion-col>
+        <!-- Boton guardar -->
         <ion-col size="12">
           <p class="ion-text-center">
             <ion-button type="submit" [disabled]="!codigo.valid">Guardar</ion-button>
           </p>
         </ion-col>
+
       </ion-row>
     </ion-grid>
   </form>
