--- a/src/app/subject/subject.page.html
+++ b/src/app/subject/subject.page.html
@@ -11,7 +11,70 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-fab slot="fixed" vertical="top" horizontal="end" [edge]="true">
+  <ion-grid>
+    <ion-row *ngFor="let subject of subjects">
+      <ion-col size="1">
+        <div class="rectangle-avatar">
+          <ion-img src="https://ionicframework.com/docs/img/demos/card-media.png" alt="Foto"></ion-img>
+        </div>
+      </ion-col>
+ 
+      <ion-col size="8">
+        <ion-label class="ion-text-wrap">
+          <h2>{{subject.sub_name}}</h2>
+          <h3>{{subject.sub_code}}</h3>
+        </ion-label>
+      </ion-col>
+
+      <ion-col>
+        <ion-button id="click-trigger-{{subject.sub_id}}">
+          <ion-icon name="ellipsis-vertical"></ion-icon>
+        </ion-button>
+        <ion-popover
+          trigger="click-trigger-{{subject.sub_id}}"
+          [dismissOnSelect]="true"
+          [keepContentsMounted]="true"
+          side="end">
+          <ng-template>
+            <ion-content>
+              <ion-list>
+                <ion-item 
+                [button]="true" 
+                [detail]="false"
+                (click)="seleccionarSubject(subject.sub_id)"> 
+                <ion-icon name="trash"></ion-icon>
+                Eliminar
+                </ion-item>
+                <ion-item
+                  [button]="true"
+                  [detail]="false"
+                  (click)="UpSubject(subject.sub_id)"> 
+                  <ion-icon name="create"></ion-icon>
+                  Modificar 
+                </ion-item>
+                <ion-item
+                  [button]="true"
+                  [detail]="false"
+                  [routerLink]="['extracurricular', subject.sub_id]"> 
+                  <ion-icon name="eye"></ion-icon>
+                  Ver mas 
+                </ion-item>
+              </ion-list>
+            </ion-content>
+          </ng-template>
+        </ion-popover>
+      </ion-col>
+
+      <!-- <ion-col>
+        <ion-button (click)="alertEliminar(extras.extgro_id)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-button>
+      </ion-col> 
+-->
+    </ion-row>
+  </ion-grid>
+
+  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
     <ion-fab-button>
 
       <ion-icon name="chevron-down-circle"></ion-icon>
@@ -29,14 +92,16 @@
     </ion-fab-list>
   </ion-fab>
 
+  
+<!--
   <ion-grid>
-    <!-- Crear una fila por cada elemento --> 
+     Crear una fila por cada elemento  
     <ion-row *ngFor="let subjects of subject" >
-      <!-- Crear columna para el icono-->
+      < Crear columna para el icono
       <ion-col size="1" >
       <img alt src="https://ionicframework.com/docs/img/demos/card-media.png">
       </ion-col>
-      <!-- Crear columna para el texto-->
+      Crear columna para el texto
       <ion-col >
         <ion-label>
           <h2>{{subjects.sub_name}}</h2>
@@ -45,7 +110,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
+-->
 
   <!-- Utiliza *ngFor para iterar sobre las asignaturas y mostrarlas en tarjetas 
   <ion-card *ngFor="let subjects of subject" >
