--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,21 +11,19 @@
 	--ion-color-primary-shade: #187d7b;
 	--ion-color-primary-tint: #329998;
 
-  //SECONDARY COLOR
-	--ion-color-secondary: #8074ED;
-	--ion-color-secondary-rgb: 128,116,237;
-	--ion-color-secondary-contrast: #000000;
-	--ion-color-secondary-contrast-rgb: 0,0,0;
-	--ion-color-secondary-shade: #7166d1;
-	--ion-color-secondary-tint: #8d82ef;
+	--ion-color-secondary: #354052;
+	--ion-color-secondary-rgb: 0,0,0;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #354052;
+	--ion-color-secondary-tint: #736B92;
 
-  //THIRD COLOR
-	--ion-color-tertiary: #3F2CE8;
-	--ion-color-tertiary-rgb: 63,44,232;
-	--ion-color-tertiary-contrast: #ffffff;
+	--ion-color-tertiary: #e2e2e2;
+	--ion-color-tertiary-rgb: 103,118,233;
+	--ion-color-tertiary-contrast: #2b2b2b;
 	--ion-color-tertiary-contrast-rgb: 255,255,255;
-	--ion-color-tertiary-shade: #3727cc;
-	--ion-color-tertiary-tint: #5241ea;
+	--ion-color-tertiary-shade: #3a3a3a;
+	--ion-color-tertiary-tint: #acb2e3;
 
   //SUCCESS NOTIFICATION
 	--ion-color-success: #2E9E21;
