--- a/src/app/question/question.page.scss
+++ b/src/app/question/question.page.scss
@@ -29,21 +29,21 @@ ion-card {
   }
   .ictittle{
     font-size: 14px;
-    bottom: -30px;
+    bottom: -75px;
   }
   .icdesc{
     font-size: 12px;
-    bottom: -25px;
+    bottom: -65px;
   }
   .icnameteacher{
     position: relative;
     font-size: 12px;
-    bottom: -17px;
+    bottom: -75px;
   }
   .icfecha{
     position: relative;
     font-size: 12px;
-    bottom: -10px;
+    bottom: -55px;
     
   }
   .imagecard{
@@ -56,12 +56,10 @@ ion-card {
     left: 150px;
     margin: 10;
     font-size: 10px;
-    top: -22px;
+    top: -25px;
     color: var(--ion-color-secondary-tint); 
     width: 75px; 
     height: 5px
-    
-    
   }
   .flecha{
     position: relative;
@@ -70,6 +68,50 @@ ion-card {
     bottom:-2px;
   }
   
+.delete{
+  position: relative;
+    left: 150px;
+    margin: 10;
+    font-size: 10px;
+    top: -45px;
+    color: var(--ion-color-secondary-tint); 
+    width: 75px; 
+    height: 5px
+}
+
+.update{
+  position: relative;
+    left: 150px;
+    margin: 10;
+    font-size: 10px;
+    top: -65px;
+    color: var(--ion-color-secondary-tint); 
+    width: 75px; 
+    height: 5px
+}
+
+.settings{
+    position: relative;
+    left: 190px;
+    margin: 10;
+    font-size: 10px;
+    bottom: 160px;
+    color: var(--ion-color-secondary-tint); 
+    width: 75px; 
+    height: 5px
+}
+.settings2{
+  position: relative;
+  left: 500px;
+  margin: 10;
+  font-size: 10px;
+  bottom: -50px;
+  color: var(--ion-color-secondary-tint); 
+  width: 75px; 
+  height: 5px
+}
+
+
   /* Estilos para los encabezados de las tarjetas */
   ion-card-header {
     background-color: var(--ion-color-tertiary);
@@ -108,5 +150,5 @@ ion-card-title {
     background-color: #87d361;
   }*/
   
-  
+
   
