--- a/src/app/up-subject/up-subject.page.html
+++ b/src/app/up-subject/up-subject.page.html
@@ -1,13 +1,50 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>up-subject</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/ruta-anterior"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Nueva Materia</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">up-subject</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <form [formGroup]="editMateria" (ngSubmit)="guardarDatos()">
+      <ion-grid>
+          <ion-row>
+              <ion-col size="12">
+                  <ion-item>
+                      <ion-label position="floating" color="primary">Nombre de la materia</ion-label>
+                      <ion-input type="text" formControlName="sub_name" class="form-control"></ion-input>
+                  </ion-item>
+                  <div id="note" *ngFor="let validation of
+        mensajes_validacion.sub_name">
+                      <ion-note color="danger" *ngIf="getError('sub_name')[(validation.type)]">
+                          <ion-icon name="information-circle-outline"></ion-icon> {{
+                          validation.message }}
+                      </ion-note>
+                  </div>
+              </ion-col>
+              <ion-col size="12">
+                  <ion-item>
+                      <ion-label position="floating" color="primary">Codigo de la Materia</ion-label>
+                      <ion-input type="text" formControlName="sub_code" class="form-control"></ion-input>
+                  </ion-item>
+                  <div id="note" *ngFor="let validation of
+        mensajes_validacion.sub_code">
+                      <ion-note color="danger" *ngIf="getError('sub_code')[(validation.type)]">
+                          <ion-icon name="information-circle-outline"></ion-icon> {{
+                          validation.message }}
+                      </ion-note>
+                  </div>
+              </ion-col>
+              
+              
+              <ion-col size="12">
+                  <p class="ion-text-center">
+                      <ion-button type="submit" [disabled]="!editMateria.valid">Guardar</ion-button>
+                  </p>
+              </ion-col>
+          </ion-row>
+      </ion-grid>
+  </form>
 </ion-content>
