CORRECION DE DATO

--- a/src/app/subject/subject.page.html
+++ b/src/app/subject/subject.page.html
@@ -39,7 +39,7 @@
                   <ion-icon name="trash"></ion-icon>
                   Eliminar
                 </ion-item>
-                <ion-item [button]="true" [detail]="false" (click)="UpSubject(subject.sub_name)">
+                <ion-item [button]="true" [detail]="false" (click)="UpSubject(subject.sub_id)">
                   <ion-icon name="create"></ion-icon>
                   Modificar
                 </ion-item>
