--- a/src/app/lista/lista.page.html
+++ b/src/app/lista/lista.page.html
@@ -45,7 +45,7 @@
                   <ion-item
                     [button]="true"
                     [detail]="false"
-                    [routerLink]="['modificar', lista.list_id]"> <!-- Agregamos la opción de Modificar -->
+                    (click)="editar(lista.list_id)">  <!-- Agregamos la opción de Modificar -->
                     <ion-icon name="create"></ion-icon>
                     Modificar
                   </ion-item>
